--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -191,30 +191,57 @@ In PostgreSQL, row-level authorization can be implemented using a feature called
 
 Example: viewing of medical history of a patient to be permitted by only the doctor with whom the patient has appointment.
 
-(to be granted inside ehrdb shell by user1)
+(to be granted inside ehrdb shell by admin)
 
+-- Step 1: Enable row-level security on the MedicalHistory table
 ```javascript
-CREATE ROLE appointment_viewer;
+ALTER TABLE MedicalHistory ENABLE ROW LEVEL SECURITY;
 ```
-
+-- Step 2: Create a role for doctors to use
 ```javascript
-GRANT SELECT ON Appointment TO appointment_viewer;
+CREATE ROLE doctor_role;
 ```
-
+-- Step 3: Grant necessary SELECT permissions
 ```javascript
-CREATE POLICY appointment_viewer_policy
-    ON MedicalHistory
-    USING (EXISTS (
+GRANT SELECT ON MedicalHistory, Appointment, Patient, Doctor TO doctor_role;
+```
+-- Step 4: Create a policy that checks for an appointment relationship
+```javascript
+CREATE POLICY doctor_patient_policy
+ON MedicalHistory
+FOR SELECT
+USING (
+    EXISTS (
         SELECT 1
-        FROM Appointment AS A
+        FROM Appointment A
         WHERE A.PatientID = MedicalHistory.PatientID
-        AND A.DoctorID = 1                
-    ));
+        AND A.DoctorID = current_setting('app.current_doctor_id')::INT
+    )
+);
 ```
-
+-- Step 5: Create a test user 
 ```javascript
-GRANT appointment_viewer TO test_user;
+CREATE USER test_user WITH PASSWORD 'password';
 ```
+-- Step 6: Grant the doctor_role to the test user
+```javascript
+GRANT doctor_role TO test_user;
+```
+-- TESTING THE POLICY
+-- Connect as the test user
+```javascript
+SET  role test_user;
+```
+-- Set the current doctor context (simulating Dr. Smith, DoctorID = 1)
+```javascript
+SET app.current_doctor_id = '1';
+```
+-- Try to access all medical histories
+```javascript
+SELECT * FROM MedicalHistory;
+```
+-- Should only see records for patients who have appointments with Dr. Smith
+-- You can also try seeing medical histories of patients assigned to other doctors by changing the doctor_id.
 
 # [OPTIONAL TASK]: Accessing SQL from a programming language Using Python
 
@@ -413,8 +440,10 @@ party_affiliation (voter_ID, party_ID, affiliation_date)
 polling_location (location_ID, precinct_ID, location_name, address, city, state, zip_code)
 election_official (official_ID, first_name, last_name, position, precinct_ID)
 
-## Task 1: Create a database based on the given schema
-## Task 2: Load dummy data on the database
+## Task 1: Create a schema in your database called voting 
+## Task 2: Create the database for the schema voting using the above given voter registration system
+## Task 3: Load dummy data on the database
+## Task 4: Grant priviledges to voters to view the details of political parties, voters cannot modify the details in the political_party table
 ## Task 3: Perform at least one example query on the database for each of the above given advanced aggregate features(Ranking, Windoing, Pivoting, Rollup, Cube)
     - Describe what the purpose of the query is and explain how each query works when using the advanced aggregate features.
 
