--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -419,7 +419,7 @@ if __name__ == '__main__':
 ```
 # Practical 2 - Exercise 
 
-Go through Advanced Aggregation Features topic given in the textbook Database Sytems Concepts( Chapter 5 Advanced SQL -  Advanced Aggregate Features Page 219)
+## Task 1 Go through Advanced Aggregation Features topic given in the textbook Database Sytems Concepts( Chapter 5 Advanced SQL -  Advanced Aggregate Features Page 219)
 Create notes on 
 - Ranking
 - Windowing
@@ -440,10 +440,11 @@ party_affiliation (voter_ID, party_ID, affiliation_date)
 polling_location (location_ID, precinct_ID, location_name, address, city, state, zip_code)
 election_official (official_ID, first_name, last_name, position, precinct_ID)
 
-## Task 1: Create a schema in your database called voting 
-## Task 2: Create the database for the schema voting using the above given voter registration system
-## Task 3: Load dummy data on the database
-## Task 4: Grant priviledges to voters to view the details of political parties, voters cannot modify the details in the political_party table
-## Task 3: Perform at least one example query on the database for each of the above given advanced aggregate features(Ranking, Windoing, Pivoting, Rollup, Cube)
+## Task 2: Create a schema in your database called voting 
+## Task 3: Create the database for the schema voting using the above given voter registration system
+## Task 4: Load dummy data on the database
+## Task 5: Grant priviledges to voters to view the details of political parties, voters cannot modify the details in the political_party table
+## Task 6: Perform at least one example query on the database for each of the above given advanced aggregate features(Ranking, Windoing, Pivoting, Rollup, Cube)
     - Describe what the purpose of the query is and explain how each query works when using the advanced aggregate features.
+## Task 7: Perform an example query demonstrating recursive queries using the WITH statement on the database.
 
