--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -445,6 +445,6 @@ election_official (official_ID, first_name, last_name, position, precinct_ID)
 ## Task 4: Load dummy data on the database
 ## Task 5: Grant priviledges to voters to view the details of political parties, voters cannot modify the details in the political_party table
 ## Task 6: Perform at least one example query on the database for each of the above given advanced aggregate features(Ranking, Windoing, Pivoting, Rollup, Cube)
-    - Describe what the purpose of the query is and explain how each query works when using the advanced aggregate features.
+Describe what the purpose of the query is and explain how each query works when using the advanced aggregate features.
 ## Task 7: Perform an example query demonstrating recursive queries using the WITH statement on the database.
 
