--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -429,16 +429,16 @@ Create notes on
   
 For the follwing voter registration system schema perform the following tasks:
 
-voter (voter_ID, first_name, last_name, dob, address, city, state, zip_code, registration_date)
-precinct (precinct_ID, precinct_name, county, state)
-voter_precinct (voter_ID, precinct_ID)
-election (election_ID, election_name, election_date, election_type)
-ballot (ballot_ID, election_ID, precinct_ID)
-voting_record (record_ID, voter_ID, election_ID, voting_date, voting_method)
-political_party (party_ID, party_name)
-party_affiliation (voter_ID, party_ID, affiliation_date)
-polling_location (location_ID, precinct_ID, location_name, address, city, state, zip_code)
-election_official (official_ID, first_name, last_name, position, precinct_ID)
+- voter (voter_ID, first_name, last_name, dob, address, city, state, zip_code, registration_date)
+- precinct (precinct_ID, precinct_name, county, state)
+- voter_precinct (voter_ID, precinct_ID)
+- election (election_ID, election_name, election_date, election_type)
+- ballot (ballot_ID, election_ID, precinct_ID)
+- voting_record (record_ID, voter_ID, election_ID, voting_date, voting_method)
+- political_party (party_ID, party_name)
+- party_affiliation (voter_ID, party_ID, affiliation_date)
+- polling_location (location_ID, precinct_ID, location_name, address, city, state, zip_code)
+- election_official (official_ID, first_name, last_name, position, precinct_ID)
 
 ## Task 2: Create a schema in your database called voting 
 ## Task 3: Create the database for the schema voting using the above given voter registration system
