--- a/_posts/2025-03-27-practical4.md
+++ b/_posts/2025-03-27-practical4.md
@@ -67,7 +67,7 @@ psql -U user1 -d ehrdb
 ADDITIONAL
 - To change user from the database server
 ```javascript
-SET  role user1
+SET  role user1;
 ```
 -  To see the list of users that exist in the database
 ```javascript
