--- a/_posts/2025-04-15-unit5.md
+++ b/_posts/2025-04-15-unit5.md
@@ -26,7 +26,6 @@ Suppose we have a Product table that stores information about products and their
 | 1          | Product A    | 19.99         | Electronics, Gadgets |
 | 2          | Product B    | 29.99         | Clothing, Fashion    |
 | 3          | Product C    | 14.99         | Books, Literature    |
-|            |              |               |                      |
 
 In this table, we can see that the categories column violates the First Normal Form because it contains multiple values (comma-separated) in a single column. According to the First Normal Form, each column should contain atomic (single) values.
 
@@ -91,7 +90,7 @@ BorrowedBooks Table:
 |-----------|-----------|---------|---------------|------------|----------------|
 | 1         | 101       | 1       | 2023-03-01    | 2023-03-15 | Publisher 1    |
 | 2         | 102       | 2       | 2023-03-05    | 2023-03-19 | Publisher 2    |
-| 3         | 103       | 3       | 2023-03-10    | 2023-03-24 | Publishe       |
+| 3         | 103       | 3       | 2023-03-10    | 2023-03-24 | Publisher 1    |
 
 In the above design, the BorrowedBooks table violates the Second Normal Form because the publisher_name column is dependent on the book_id column, which is only a part of the candidate key (borrow_id). This partial dependency can lead to data redundancy and potential inconsistencies.
 
