--- a/_posts/2025-04-15-practical5.md
+++ b/_posts/2025-04-15-practical5.md
@@ -7,7 +7,7 @@ aside:
 ---
 # Guided Session
 
-Example Database: PokeDB
+Example Database: DigiDB
 
 ## Connect to your postgresql server
 
@@ -144,4 +144,50 @@ Example Database: PokeDB
     WHERE d.attribute = 'Fire'::text;
     ```
 # Practical 5 Exercise
+
+-  Suppose you maintain a Digimon table that inadvertently stores multiple special moves in one column. Consider the following modified table:
+digimon_number | digimon_name | stage | special_moves
+1 | Agumon | Rookie | Pepper Breath, Spitfire
+2 | Gabumon | Rookie | Ice Blast, Horn Attack
+3 | Patamon | In-Training | Light Attack, Thunder Shock
+
+- Is there a violation of atomicity in this table? If so explain and implement improvements for the table.
+
+
+-  Suppose you have a table that stores the moves learned by each Digimon during battles. In this table, the primary key is composite (digimon_number, move_name). Consider the following table:
+
+digimon_number | move_name | move_type | sp_cost
+1 | Pepper Breath | Special | 3
+1 | Spitfire | Physical | 2
+2 | Ice Blast | Special | 4
+2 | Horn Attack | Physical | 2
+
+- Explain why the non-key columns (move_type, sp_cost) depend only on part of the composite key (specifically, the move name) rather than on the entire key.
+- How would you restructure the schema to eliminate the partial dependency and achieve Second Normal Form?
+
+
+- Consider a table that records Digimon battles, but it includes a non-key column that is transitively determined by another non-key attribute. Assume the following “DigimonBattle” table:
+battle_id | digimon_number | opponent_name | opponent_attribute | recommended_move
+101 | 1 | MetalSeadramon | Virus | Data Burst
+102 | 2 | Devimon | Dark | Shadow Claw
+103 | 3 | Myotismon | Virus | Data Burst
+
+In this design, suppose the recommended move is determined solely by the opponent’s attribute (for example, all battles against a Virus-type opponent have the same recommended move).
+
+- Explain why the recommended_move column is transitively dependent on the non-key column opponent_attribute rather than directly on the primary key (battle_id).
+- Why does this design violate 3NF?
+- Propose how you would decompose this table (for instance, by creating a separate OpponentStrategy table that pairs opponent_attribute with recommended_move) so that the battle table satisfies Third Normal Form.
+
+
+- Suppose there is a table used to manage training sessions for Digimon. The table contains details about the trainer, the Digimon, and the training location:
+training_id | trainer_name | digimon_number | training_location | trainer_experience
+1001 | Tai | 1 | Dojo A | 5 years
+1002 | Matt | 2 | Dojo B | 3 years
+1003 | Tai | 3 | Dojo A | 5 years
+
+- Which dependency in this table violates the Boyce-Codd Normal Form?
+- Why is trainer_name (which determines trainer_experience) not a candidate key?
+- Propose how to decompose this table into two (or more) tables to ensure every determinant is a candidate key.
+
+
 
