--- a/_posts/2025-04-15-practical5.md
+++ b/_posts/2025-04-15-practical5.md
@@ -9,16 +9,8 @@ aside:
 
 Example Database: DigiDB
 
-## Connect to your postgresql server
-
-1. Check your username
-- Connect to postgres and use the following command
-```javascript
-\conninfo
-```
-
 ## Create DigimonDB
-- Create DB using pgadmin4 
+1. Create DB using pgadmin4 
   - Create DB "digiDB"
   
 ## Setup PokeDB
