--- a/_posts/2025-04-15-unit5.md
+++ b/_posts/2025-04-15-unit5.md
@@ -354,3 +354,62 @@ The choice between BCNF and 3NF depends on the specific requirements of the data
 In scenarios where it's not possible to achieve all goals (BCNF, losslessness, dependency preservation), the decision might come down to prioritizing BCNF over dependency preservation with 3NF, especially considering the limitations of SQL in enforcing functional dependencies beyond primary key constraints.
 
 
+## Functional Dependency
+
+### Finding closure of a functional dependency
+
+OrderID | CustomerID | CustomerName | PhoneNumber | PizzaType
+101 | C001 | Alice | 555-1234 | Margherita
+102 | C002 | Bob | 555-5678 | Pepperoni
+103 | C001 | Alice | 555-1234 | Veggie
+
+From the table, we can infer some functional dependencies:
+
+CustomerID → CustomerName
+
+CustomerID → PhoneNumber
+
+OrderID → CustomerID
+
+OrderID → PizzaType
+
+```javascript
+F = { 
+  CustomerID → CustomerName,
+  CustomerID → PhoneNumber,
+  OrderID → CustomerID,
+  OrderID → PizzaType
+}
+```
+
+Closure of orderID: OrderID⁺ = { OrderID }
+
+Apply FDs:
+
+OrderID → CustomerID
+
+Add CustomerID:
+
+OrderID⁺ = { OrderID, CustomerID }
+
+Now that we have CustomerID:
+
+CustomerID → CustomerName
+
+Add CustomerName
+
+CustomerID → PhoneNumber
+
+Add PhoneNumber
+
+OrderID⁺ = { OrderID, CustomerID, CustomerName, PhoneNumber }
+
+OrderID → PizzaType
+
+Add PizzaType
+
+OrderID⁺ = { OrderID, CustomerID, CustomerName, PhoneNumber, PizzaType }
+
+Final Closure
+
+OrderID⁺ = { OrderID, CustomerID, CustomerName, PhoneNumber, PizzaType }
