--- a/_posts/2025-04-15-practical5.md
+++ b/_posts/2025-04-15-practical5.md
@@ -131,7 +131,7 @@ Example Database: DigiDB
 | 2 | Gabumon | Rookie | Ice Blast, Horn Attack |
 | 3 | Patamon | In-Training | Light Attack, Thunder Shock |
 
-- Is there a violation of atomicity in this table? If so explain and implement improvements for the table.
+- Is there a violation of the first normal form  in this table? If so explain and implement improvements for the table.
 
 
 -  Suppose you have a table that stores the moves learned by each Digimon during battles. In this table, the primary key is composite (digimon_number, move_name). Consider the following table:
