--- a/_posts/2025-04-24-practical6.md
+++ b/_posts/2025-04-24-practical6.md
@@ -22,7 +22,7 @@ CREATE DATABASE films;
 
 ## Task 3 : Load input data into the tables
 
-Important Note!: You might have to modify the input using other programming languages for the inputes to be usable for your tables.
+Important Note!: You might have to modify the input using other programming languages for the inputs to be usable for your tables.
 
 ## Task 4 : Design scenarios where an application developer has to modify or retrieve data from the database. Implement SQL queries that complement these scenarios.
 
