--- a/_posts/2025-04-28-practical7.md
+++ b/_posts/2025-04-28-practical7.md
@@ -1,9 +1,264 @@
 ---
-title: Practical 7 - Query Optimization
+title: Practical 7 - Query Processing and Optimization
 sidebar:
   nav: pract-en
 aside:
   toc: true
 ---
-# Guided Session
+
+
+## Guided Session
+
+### Task 1:
+
+Create the following bank database, the database should implement all necessary constraints:
+
+branch(branch_name(PK), branch_city, assets)
+customer (customer_name(PK), customer_street, customer_city) 
+account (account_number(PK), branch_name, balance)
+loan (loan_number(PK), branch_name, amount) 
+borrower (customer_name(PK), loan_number(FK))
+depositor (customer_name(PK), account_number(FK))
+
+### Task 2:
+
+Insert the following dummy input:
+
+```javascript
+-- Insert data into the branch table
+INSERT INTO branch VALUES ('Downtown', 'New York', 9000000);
+INSERT INTO branch VALUES ('Redwood', 'Chicago', 2100000);
+INSERT INTO branch VALUES ('Brighton', 'Brooklyn', 7100000);
+INSERT INTO branch VALUES ('Central', 'Boston', 4000000);
+INSERT INTO branch VALUES ('Pownal', 'Bennington', 400000);
+INSERT INTO branch VALUES ('North Town', 'Chicago', 3700000);
+INSERT INTO branch VALUES ('Perryridge', 'New York', 1700000);
+INSERT INTO branch VALUES ('Round Hill', 'Bronx', 8000000);
+INSERT INTO branch VALUES ('Mianus', 'Boston', 400000);
+INSERT INTO branch VALUES ('South Town', 'Chicago', 1200000);
+
+-- Insert data into the customer table
+INSERT INTO customer VALUES ('Johnson', 'Alma St', 'Chicago');
+INSERT INTO customer VALUES ('Smith', 'North St', 'Rye');
+INSERT INTO customer VALUES ('Hayes', 'Main St', 'New York');
+INSERT INTO customer VALUES ('Turner', 'Putnam St', 'Brooklyn');
+INSERT INTO customer VALUES ('Williams', 'Nassau St', 'Princeton');
+INSERT INTO customer VALUES ('Adams', 'Spring St', 'Chicago');
+INSERT INTO customer VALUES ('Brown', 'Newton St', 'Boston');
+INSERT INTO customer VALUES ('Jones', 'Market St', 'New York');
+INSERT INTO customer VALUES ('Miller', 'Central St', 'Chicago');
+INSERT INTO customer VALUES ('Wilson', 'University St', 'Boston');
+INSERT INTO customer VALUES ('Moore', 'Lake St', 'Chicago');
+INSERT INTO customer VALUES ('Taylor', 'Park St', 'New York');
+INSERT INTO customer VALUES ('Anderson', 'Broadway', 'Brooklyn');
+INSERT INTO customer VALUES ('Thomas', 'River St', 'Chicago');
+INSERT INTO customer VALUES ('White', 'Highland St', 'Boston');
+
+-- Insert data into the account table
+INSERT INTO account VALUES ('A-101', 'Downtown', 500);
+INSERT INTO account VALUES ('A-102', 'Brighton', 700);
+INSERT INTO account VALUES ('A-201', 'Central', 900);
+INSERT INTO account VALUES ('A-215', 'Mianus', 700);
+INSERT INTO account VALUES ('A-217', 'Brighton', 750);
+INSERT INTO account VALUES ('A-222', 'Redwood', 700);
+INSERT INTO account VALUES ('A-305', 'Round Hill', 350);
+INSERT INTO account VALUES ('A-333', 'Central', 850);
+INSERT INTO account VALUES ('A-444', 'North Town', 1200);
+INSERT INTO account VALUES ('A-555', 'Perryridge', 7500);
+INSERT INTO account VALUES ('A-666', 'Perryridge', 6500);
+INSERT INTO account VALUES ('A-777', 'Downtown', 8000);
+INSERT INTO account VALUES ('A-888', 'Brighton', 5500);
+INSERT INTO account VALUES ('A-999', 'North Town', 10000);
+INSERT INTO account VALUES ('A-123', 'South Town', 4500);
+INSERT INTO account VALUES ('A-456', 'Downtown', 3500);
+INSERT INTO account VALUES ('A-789', 'Redwood', 9500);
+INSERT INTO account VALUES ('A-321', 'Central', 2500);
+INSERT INTO account VALUES ('A-654', 'Brighton', 1500);
+INSERT INTO account VALUES ('A-987', 'Downtown', 6500);
+
+-- Insert data into the loan table
+INSERT INTO loan VALUES ('L-11', 'Round Hill', 900);
+INSERT INTO loan VALUES ('L-14', 'Downtown', 1500);
+INSERT INTO loan VALUES ('L-15', 'Redwood', 1500);
+INSERT INTO loan VALUES ('L-16', 'Brighton', 1300);
+INSERT INTO loan VALUES ('L-17', 'Downtown', 1000);
+INSERT INTO loan VALUES ('L-23', 'Redwood', 2000);
+INSERT INTO loan VALUES ('L-24', 'Central', 2200);
+INSERT INTO loan VALUES ('L-25', 'Brighton', 3000);
+INSERT INTO loan VALUES ('L-31', 'North Town', 3500);
+INSERT INTO loan VALUES ('L-32', 'Downtown', 7000);
+INSERT INTO loan VALUES ('L-33', 'Central', 8000);
+INSERT INTO loan VALUES ('L-34', 'Perryridge', 10000);
+INSERT INTO loan VALUES ('L-35', 'Downtown', 15000);
+INSERT INTO loan VALUES ('L-36', 'Brighton', 20000);
+INSERT INTO loan VALUES ('L-37', 'North Town', 25000);
+
+-- Insert data into the borrower table
+INSERT INTO borrower VALUES ('Johnson', 'L-17');
+INSERT INTO borrower VALUES ('Smith', 'L-23');
+INSERT INTO borrower VALUES ('Hayes', 'L-15');
+INSERT INTO borrower VALUES ('Turner', 'L-11');
+INSERT INTO borrower VALUES ('Williams', 'L-16');
+INSERT INTO borrower VALUES ('Adams', 'L-24');
+INSERT INTO borrower VALUES ('Brown', 'L-25');
+INSERT INTO borrower VALUES ('Jones', 'L-14');
+INSERT INTO borrower VALUES ('Miller', 'L-17');
+INSERT INTO borrower VALUES ('Wilson', 'L-31');
+INSERT INTO borrower VALUES ('Moore', 'L-32');
+INSERT INTO borrower VALUES ('Taylor', 'L-33');
+INSERT INTO borrower VALUES ('Anderson', 'L-34');
+INSERT INTO borrower VALUES ('Thomas', 'L-35');
+INSERT INTO borrower VALUES ('White', 'L-36');
+INSERT INTO borrower VALUES ('Hayes', 'L-37');
+
+-- Insert data into the depositor table
+INSERT INTO depositor VALUES ('Johnson', 'A-101');
+INSERT INTO depositor VALUES ('Smith', 'A-102');
+INSERT INTO depositor VALUES ('Hayes', 'A-201');
+INSERT INTO depositor VALUES ('Turner', 'A-215');
+INSERT INTO depositor VALUES ('Williams', 'A-217');
+INSERT INTO depositor VALUES ('Adams', 'A-222');
+INSERT INTO depositor VALUES ('Brown', 'A-305');
+INSERT INTO depositor VALUES ('Jones', 'A-333');
+INSERT INTO depositor VALUES ('Miller', 'A-444');
+INSERT INTO depositor VALUES ('Wilson', 'A-555');
+INSERT INTO depositor VALUES ('Moore', 'A-666');
+INSERT INTO depositor VALUES ('Taylor', 'A-777');
+INSERT INTO depositor VALUES ('Anderson', 'A-888');
+INSERT INTO depositor VALUES ('Thomas', 'A-999');
+INSERT INTO depositor VALUES ('White', 'A-123');
+INSERT INTO depositor VALUES ('Johnson', 'A-456');
+INSERT INTO depositor VALUES ('Smith', 'A-789');
+INSERT INTO depositor VALUES ('Hayes', 'A-321');
+INSERT INTO depositor VALUES ('Turner', 'A-654');
+INSERT INTO depositor VALUES ('Williams', 'A-987');
+```
+### Task 3:
+
+EXPLAIN command - This shows the query plan without executing the query
+
+```javascript
+EXPLAIN
+SELECT c.customer_name, a.account_number, a.balance
+FROM customer c
+JOIN depositor d ON c.customer_name = d.customer_name
+JOIN account a ON d.account_number = a.account_number
+WHERE c.customer_city = 'Chicago';
+```
+
+### Task 4: 
+
+EXPLAIN ANALYZE command - Executes the query and shows actual timing and row counts
+
+```javascript
+EXPLAIN ANALYZE
+SELECT c.customer_name, a.account_number, a.balance
+FROM customer c
+JOIN depositor d ON c.customer_name = d.customer_name
+JOIN account a ON d.account_number = a.account_number
+WHERE c.customer_city = 'Chicago';
+```
+### Task 5:
+
+EXPLAIN with BUFFERS option - Shows buffer usage statistics
+
+```javascript
+EXPLAIN (ANALYZE, BUFFERS)
+SELECT c.customer_name, a.account_number, a.balance
+FROM customer c
+JOIN depositor d ON c.customer_name = d.customer_name
+JOIN account a ON d.account_number = a.account_number
+WHERE c.customer_city = 'Chicago';
+```
+
+## Practical Exercise
+
+### Task 1: 
+
+Execution plan node types represent the different operations performed by a database query engine to retrieve and process data.
+
+For each of the following execution plan nodes, explain what operations they perform and when are they used by the database. Also include example queries showing their usage(Note: Use EXPLAIN commands for the queries).
+
+1. Sequential Scan
+2. Index ScanIndex Only Scan
+3. Bitmap Index Scan & Bitmap Heap Scan
+4. Nested Loop Join
+5. Hash Join
+6. Merge Join
+7. Aggregate operations (GroupAggregate, HashAggregate)
+8. Sort operations
+9. Limit operations
+10. CTE Scan
+11. Subquery Scan
+
+### Task 2:
+Consider the bank database, and the following SQL query:
+
+select T.branch
+name from branch T, branch S
+where T.assets > S.assets and S.branch city = “Brooklyn”
+
+Write an efficient relational-algebra expression that is equivalent to this query.
+Justify your choice.
+
+
+### Task 3
+
+Write an SQL query to find all customers who have accounts with balances greater than $1000 at branches located in "New York". Then:
+- Draw the initial query tree (relational algebra expression)
+- Show how the query would be processed through parsing, translation, and evaluation steps
+- Identify potential optimization opportunities
+
+### Task 4
+
+Consider the following SQL query:
+
+```javascript
+SELECT customer_name
+FROM customer
+WHERE customer_name IN (
+    SELECT customer_name 
+    FROM depositor
+    WHERE account_number IN (
+        SELECT account_number
+        FROM account
+        WHERE balance > 5000
+    )
+);
+```
+- Convert this nested query into an equivalent join query
+- Create two different query execution plans for this query
+- Compare their potential performance
+
+### Task 5
+
+Consider the following SQL query:
+
+```javascript
+SELECT customer_name
+FROM borrower
+WHERE loan_number IN (
+    SELECT loan_number
+    FROM loan
+    WHERE branch_name = 'Downtown' AND amount > 10000
+);
+```
+- Create two different query execution plans
+- If there is an index on branch_name and amount in the loan relation, how would it affect your execution plan?
+
+### Task 6
+
+Write a query to find customers who have accounts but no loans. Then:
+- Show how you would implement this using set operations
+- Create two different execution plans
+
+### Task 7
+
+Imagine you need to optimize the overall performance of this banking database system:
+
+- Write three queries that would likely be frequent in a banking system
+- For each query, suggest what indices would be beneficial
+- Explain how these indices would affect the query execution plans and costs
+
+
 
