--- a/_posts/2025-04-28-practical7.md
+++ b/_posts/2025-04-28-practical7.md
@@ -194,9 +194,11 @@ For each of the following execution plan nodes, explain what operations they per
 ### Task 2:
 Consider the bank database, and the following SQL query:
 
+```javascript
 select T.branch
 name from branch T, branch S
 where T.assets > S.assets and S.branch city = “Brooklyn”
+```
 
 Write an efficient relational-algebra expression that is equivalent to this query.
 Justify your choice.
